registar todo bonito e assim

--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/NoApresentacoesAction.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Aula/NoApresentacoesAction.cshtml
@@ -1,6 +1,8 @@
 ﻿
 @{
     ViewBag.Title = "Aula não Implementada";
+
+    Layout = "~/Views/Shared/_LayoutWithBar.cshtml";
 }
 
 <h2>Aula ainda não Implementada</h2>
