--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Personagen/MostraTutor.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Personagen/MostraTutor.cshtml
@@ -116,7 +116,7 @@
     .helps {
         overflow: hidden;
         overflow-y: scroll;
-        height: 400px;
+        max-height: 400px;
     }
 
     .click_me {
