--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Avaliacao/avaliar.cshtml
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Views/Avaliacao/avaliar.cshtml
@@ -6,6 +6,12 @@
 }
 
 
+<div class="containerCards">
+    <div class="card tutor">
+        @Html.Action("MostraTutor", "Personagen", "Personagen/MostraTutor")
+    </div>
+</div>
+
 <div style="text-align:center;" id="divStartGame">
     <p></p>
     <button type="button" style="height:90px; width:200px; text-align:center" class="btn-info" onclick="startGame()"> Iniciar a Avaliação </button>
